--- a/rankedpractice.html
+++ b/rankedpractice.html
@@ -34,8 +34,8 @@
                 
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Classic</a></li>
-                        <li><a href="rankedpractice.html">Ranked Practice</a></li>
+                        <li><a href="index.html">Classic</a></li>
+                        <li class="active"><a href="#bodyContain">Ranked Practice</a></li>
                     </ul>
                 </div>
             </div>
@@ -44,24 +44,24 @@
         <div class="container contentContainer" id="body">
             <div id="main">
                 <div class="col-md-6 col-md-offset-3">
-                    <span id="title">Classic<br />
+                    <span id="title">Ranked Practice<br />
                     <br />
                     <div id="roles">
-                        <span class="role">Sherrif</span><br />
-                        <span class="role">Doctor</span><br />
-                        <span class="role">Investigator</span><br />
                         <span class="role">Jailor</span><br />
-                        <span class="role">Medium</span><br />
-                        <span class="role">Godfather</span><br />
-                        <span class="role">Framer</span><br />
-                        <span class="role">Executioner</span><br />
-                        <span class="role">Escort</span><br />
-                        <span class="role">Mafioso</span><br />
-                        <span class="role">Lookout</span><br />
-                        <span class="role">Serial Killer</span><br />
+                        <span class="role">Town Investigative</span><br />
+                        <span class="role">Town Investigative</span><br />
+                        <span class="role">Town Support</span><br />
+                        <span class="role">Town Support</span><br />
+                        <span class="role">Town Protective</span><br />
                         <span class="role">Town Killing</span><br />
-                        <span class="role">Jester</span><br />
                         <span class="role">Random Town</span><br />
+                        <span class="role">Godfather</span><br />
+                        <span class="role">Mafioso</span><br />
+                        <span class="role">Random Mafia</span><br />
+                        <span class="role">Neutral Killing</span><br />
+                        <span class="role">Neutral Evil</span><br />
+                        <span class="role">Neutral Benign</span><br />
+                        <span class="role">Any</span><br />
                     </div>
                 </div>
             </div>
