--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
             <div id="main">
                 <div class="col-md-6 col-md-offset-3">
                     <span id="title">Classic<br />
-                    <br />
                     <div id="roles">
-                        <span class="role">Sherrif</span><br />
+                        <span class="role">Sheriff</span><br />
                         <span class="role">Doctor</span><br />
                         <span class="role">Investigator</span><br />
                         <span class="role">Jailor</span><br />
