started working on search filter

--- a/rankedpractice.html
+++ b/rankedpractice.html
@@ -43,7 +43,7 @@
         
         <div class="container contentContainer" id="body">
             <div id="main">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-6 ">
                     <span id="title">Ranked Practice<br />
                     <div id="roles">
                         <span class="role">Jailor</span><br />
@@ -63,6 +63,10 @@
                         <span class="role">Any</span><br />
                     </div>
                 </div>
+                <div class = "well col-md-6">
+                        Search Bar<br />
+                        Roles
+                    </div>
             </div>
         </div>
 		
