added roles filter thing

--- a/rankedpractice.html
+++ b/rankedpractice.html
@@ -63,9 +63,13 @@
                         <span class="role">Any</span><br />
                     </div>
                 </div>
-                <div class = "well col-md-6">
-                        Search Bar<br />
-                        Roles
+                <div class = "well well-sm col-md-4 col-md-offset-2">
+                    Roles
+                    <hr> 
+                    <input type = "text" class="form-control input-sm" name = "filter" id = "filter" placeholder="Filter roles">
+                        <div id="rolelist" class = "filterrolelist">
+
+                        </div>
                     </div>
             </div>
         </div>
