Fixed recheck with filter functionality

--- a/rankedpractice.html
+++ b/rankedpractice.html
@@ -47,10 +47,10 @@
                     <span id="title">Ranked Practice<br />
                     <div id="roles">
                         <span class="role">Jailor</span><br />
-                        <span class="role">Town Investigative</span><br />
-                        <span class="role">Town Investigative</span><br />
-                        <span class="role">Town Support</span><br />
-                        <span class="role">Town Support</span><br />
+                        <span class="role" id="towninvest">Town Investigative</span><br />
+                        <span class="role" id="towninvest1">Town Investigative</span><br />
+                        <span class="role" id="townsupport">Town Support</span><br />
+                        <span class="role" id="townsupport1">Town Support</span><br />
                         <span class="role">Town Protective</span><br />
                         <span class="role">Town Killing</span><br />
                         <span class="role">Random Town</span><br />
