Added homepage and quick fixes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <div class="container" id="body">
             <div id = "main" style = "text-align: left">
                 <h1>Welcome!</h1>
-                <p>Hello, this is a town of salem companion app to help you keep track of different roles during the game</p>
+                <p>Hello, this is a Town of Salem companion app to help you keep track of different roles during the game. This is mainly intended for players of Ranked and Ranked Practice.</p>
+                <p>Click on roles to strike them out and eliminate options ==ADD GIF HERE OF STRIKE THROUGH==</p>
+                <p>If you don't know an alignment/category of role filter it out using the search box and let the app do the work for you ==ADD GIF OF SEARCHING HERE==</p>
             </div>
         </div>
 		
