Finished intro page except for explanatory gifs

--- a/index.html
+++ b/index.html
@@ -45,8 +45,16 @@
             <div id = "main" style = "text-align: left">
                 <h1>Welcome!</h1>
                 <p>Hello, this is a Town of Salem companion app to help you keep track of different roles during the game. This is mainly intended for players of Ranked and Ranked Practice.</p>
-                <p>Click on roles to strike them out and eliminate options ==ADD GIF HERE OF STRIKE THROUGH==</p>
+                <br>
+                <h2>How To Use:</h2>
+                <p>Click on roles/categories to strike them out and eliminate options ==ADD GIF HERE OF STRIKE THROUGH==</p>
                 <p>If you don't know an alignment/category of role filter it out using the search box and let the app do the work for you ==ADD GIF OF SEARCHING HERE==</p>
+                <p>Begin by clicking on Ranked Practice in the navigation bar above</p>
+                <br>
+                <h2>Contact</h2>
+                <p>Any and all feedback is appreciated, contact us with either of one of these</p>
+                <p>My Email</p>
+                <p>Your Email</p>
             </div>
         </div>
 		
