Added contact page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="rankedpractice.html">Ranked Practice</a></li>
+                        <li><a href="contact.php">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -51,10 +52,7 @@
                 <p>If you don't know an alignment/category of role filter it out using the search box and let the app do the work for you ==ADD GIF OF SEARCHING HERE==</p>
                 <p>Begin by clicking on Ranked Practice in the navigation bar above</p>
                 <br>
-                <h2>Contact</h2>
-                <p>Any and all feedback is appreciated, contact us with either of one of these</p>
-                <p>My Email</p>
-                <p>Your Email</p>
+                <h2><a href="contact.php">Contact Us</a></h2>
             </div>
         </div>
 		
