--- a/rankedpractice.html
+++ b/rankedpractice.html
@@ -35,7 +35,8 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active"><a href="#bodyContain">Ranked Practice</a></li>
+                        <li class="active"><a href="rankedpractice.html">Ranked Practice</a></li>
+                        <li><a href="contact.php">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
