Added gifs to homepage

--- a/index.html
+++ b/index.html
@@ -47,10 +47,19 @@
                 <h1>Welcome!</h1>
                 <p>Hello, this is a Town of Salem companion app to help you keep track of different roles during the game. This is mainly intended for players of Ranked and Ranked Practice.</p>
                 <br>
-                <h2>How To Use:</h2>
-                <p>Click on roles/categories to strike them out and eliminate options ==ADD GIF HERE OF STRIKE THROUGH==</p>
-                <p>If you don't know an alignment/category of role filter it out using the search box and let the app do the work for you ==ADD GIF OF SEARCHING HERE==</p>
-                <p>Begin by clicking on Ranked Practice in the navigation bar above</p>
+                <h2>Functionality:</h2>
+                <h3>Strikethrough!</h3>
+                <p>Click on roles/categories to strike them out and eliminate options:</p>
+                <br>
+                <div class = "well" style = "text-align: center;"><img class = "demonstration" src = "assets/strikethrough.gif"></div>
+                <br>
+                <h3>Filter Alignments!</h3>
+                <p>If you don't know an alignment/category of role filter it out using the search box and let the app do the work for you: </p>
+                <br>
+                <div class = "well" style = "text-align: center;"><img class = "demonstration" src = "assets/filter.gif"></div>
+                <br>
+                <h3>Begin!</h3>
+                <p>Begin by clicking on <a href="rankedpractice.html">Ranked Practice</a> in the navigation bar above</p>
                 <br>
                 <h2><a href="contact.php">Contact Us</a></h2>
             </div>
