--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="rankedpractice.html">Ranked Practice</a></li>
                         <li><a href="contact.php">Contact Us</a></li>
+                        <li><a href="donate.html">Donate</a></li>
                     </ul>
                 </div>
             </div>
@@ -63,6 +64,10 @@
                 <br>
                 <h2><a href="contact.php">Contact Us</a></h2>
             </div>
+        </div>
+		
+    </body>
+</html>
         </div>
 		
     </body>
