--- a/rankedpractice.html
+++ b/rankedpractice.html
@@ -37,6 +37,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li class="active"><a href="rankedpractice.html">Ranked Practice</a></li>
                         <li><a href="contact.php">Contact Us</a></li>
+                        <li><a href="donate.html">Donate</a></li>
                     </ul>
                 </div>
             </div>
