--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                 <p>Begin by clicking on <a href="rankedpractice.html">Ranked Practice</a> in the navigation bar above</p>
                 <br>
                 <h2><a href="contact.php">Contact Us</a></h2>
+                <p>If you have any questions or suggestions, feel free to fill out the form and we will get back to you as soon as possible!</p>
+                <br>
+                <h2><a href="donate.html">Donate</a></h2>
+                <p>Any donations would be very helpful, please consider it as we are an Ad-Free website built to help our users.</p>
+                
             </div>
         </div>
 		
