small grammar fix

--- a/donate.html
+++ b/donate.html
@@ -48,7 +48,7 @@
                 
             </div>
             <h1>Donations!</h1>
-            <p>Thank you so much for visiting our website and using our app. This app was developed by two high school boys during the summer, motivated by a love for Town of Salem the game by BlankMediaGames. Myself, David Wang, and my friend, Jeremy appreciate any donations, large or small, to help us keep the app running and continue its development. Again, thank you for visiting our web app and have a nice day!</p>
+            <p>Thank you so much for visiting our website and using our app. This app was developed by two high school boys during the summer who were motivated by a love for Town of Salem by BlankMediaGames. Myself, David Wang, and my friend, Jeremy, appreciate any donations, large or small, to help us keep the app running and continue its development. Again, thank you for visiting our web app and have a nice day!</p>
             <br>
             
             <span style="text-align:center">
