Added Privacy Policy and Re-added Contact page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         <li><a href="rankedpractice.html">Ranked Practice</a></li>
                         <li><a href="contact.php">Contact Us</a></li>
                         <li><a href="donate.html">Donate</a></li>
+                        <li><a href="privacypolicy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
             </div>
@@ -67,7 +68,6 @@
                 <br>
                 <h2><a href="donate.html">Donate</a></h2>
                 <p>Any donations would be very helpful, please consider it as we are an Ad-Free website built to help our users.</p>
-                
             </div>
         </div>
 		
