--- a/donate.html
+++ b/donate.html
@@ -38,6 +38,7 @@
                         <li><a href="rankedpractice.html">Ranked Practice</a></li>
                         <li><a href="contact.php">Contact Us</a></li>
                         <li class="active"><a href="donate.html">Donate</a></li>
+                        <li><a href="privacypolicy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
             </div>
