small fix to change tooltip off of title whatever

--- a/rankedpractice.html
+++ b/rankedpractice.html
@@ -51,21 +51,21 @@
                 <div class="col-md-4">
                     <span class="title">Ranked Practice</span>
                     <div id="roles">
-                        <span class="role" data-toggle="tooltip" title="test note">Jailor</span><br />
-                        <span class="role" data-toggle="tooltip" title="" id="towninvest">Town Investigative</span><br />
-                        <span class="role" data-toggle="tooltip" title="" id="towninvest1">Town Investigative</span><br />
-                        <span class="role" data-toggle="tooltip" title="" id="townsupport">Town Support</span><br />
-                        <span class="role" data-toggle="tooltip" title="" id="townsupport1">Town Support</span><br />
-                        <span class="role" data-toggle="tooltip" title="">Town Protective</span><br />
-                        <span class="role" data-toggle="tooltip" title="">Town Killing</span><br />
-                        <span class="role" data-toggle="tooltip" title="">Random Town</span><br />
-                        <span class="role" data-toggle="tooltip" title="">Godfather</span><br />
-                        <span class="role" data-toggle="tooltip" title="">Mafioso</span><br />
-                        <span class="role" data-toggle="tooltip" title="">Random Mafia</span><br />
-                        <span class="role" data-toggle="tooltip" title="">Neutral Killing</span><br />
-                        <span class="role" data-toggle="tooltip" title="">Neutral Evil</span><br />
-                        <span class="role" data-toggle="tooltip" title="">Neutral Benign</span><br />
-                        <span class="role" data-toggle="tooltip" title="">Any</span><br />
+                        <span class="role" data-toggle="tooltip">Jailor</span><br />
+                        <span class="role" data-toggle="tooltip" id="towninvest">Town Investigative</span><br />
+                        <span class="role" data-toggle="tooltip" id="towninvest1">Town Investigative</span><br />
+                        <span class="role" data-toggle="tooltip" id="townsupport">Town Support</span><br />
+                        <span class="role" data-toggle="tooltip" id="townsupport1">Town Support</span><br />
+                        <span class="role" data-toggle="tooltip">Town Protective</span><br />
+                        <span class="role" data-toggle="tooltip">Town Killing</span><br />
+                        <span class="role" data-toggle="tooltip">Random Town</span><br />
+                        <span class="role" data-toggle="tooltip">Godfather</span><br />
+                        <span class="role" data-toggle="tooltip">Mafioso</span><br />
+                        <span class="role" data-toggle="tooltip">Random Mafia</span><br />
+                        <span class="role" data-toggle="tooltip">Neutral Killing</span><br />
+                        <span class="role" data-toggle="tooltip">Neutral Evil</span><br />
+                        <span class="role" data-toggle="tooltip">Neutral Benign</span><br />
+                        <span class="role" data-toggle="tooltip">Any</span><br />
                     </div>
                 </div>
                 <div class = "well well-sm col-md-4 col-md-offset-4">
