--- a/donate.html
+++ b/donate.html
@@ -54,7 +54,7 @@
             
             <span style="text-align:center">
             <p>If you would like to donate, send some BTC over to the address listed below. Any size donations are always appreciated.</p>
-            <h1><span style="color:#DF691A">1CzAugGje4YdUdedCmQgmvyXnWYp76RknU</span></h2>
+            <h1><span style="color:#DF691A" class="btcadd">17dKXoZxTUxZrn8RAASa6j9mnEzob26XeG</span></h2>
             </span>
 
         </div>
