Added some stuff

--- a/rankedpractice.html
+++ b/rankedpractice.html
@@ -25,6 +25,8 @@
           ga('send', 'pageview');
 
         </script>
+        
+        </div>
 
         <script src="js/functions.js"></script>
         
