Added notes tutorial

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
                 <p>If you don't know an alignment/category of role filter it out using the search box and let the app do the work for you: </p>
                 <br>
                 <div class = "well" style = "text-align: center;"><img class = "demonstration" src = "assets/filter.gif"></div>
+                <h3>Notes!</h3>
+                <p>You are able to create, edit, and view notes for each specific role/category.<br>
+                To create a note, right click on any role/category and type in to the input box, then click OK. <br>
+                To edit a note, right click on a role/category that a note has already been created for, then edit your note and click OK. <br>
+                To view a note, hover over a role/category and you will be able to see what you have written.
                 <br>
                 <h3>Begin!</h3>
                 <p>Begin by clicking on <a href="rankedpractice.html">Ranked Practice</a> in the navigation bar above</p>
