Disabled Question Generator checkbox while developing it

--- a/rankedpractice.html
+++ b/rankedpractice.html
@@ -120,7 +120,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="checkbox">
-                            <label><input type="checkbox" value="" id="questionGenCheck">Question Generator</label>
+                            <label><input type="checkbox" value="" id="questionGenCheck" disabled>Question Generator (Currently Disabled)</label>
                         </div>
                     </div>
                     <div class="modal-footer">
