Added alignment back to questions

--- a/donate.html
+++ b/donate.html
@@ -80,7 +80,7 @@
             <p>If you would rather donate in Bitcoin, send some over to the address listed below.</p>
             <h1><span style="color:#DF691A" class="btcadd">17dKXoZxTUxZrn8RAASa6j9mnEzob26XeG</span></h2>
             <br>
-            <p>DONATIONS ARE NON-REFUNDABLE</p>
+            <p>Donations are non-refundable</p>
             </span>
 
         </div>
