--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -49,6 +49,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="rankedpractice.html">Ranked Practice</a></li>
+                        <li><a href="extensions.html">Extensions</a></li>
                         <li><a href="contact.php">Contact Us</a></li>
                         <li><a href="donate.html">Donate</a></li>
                         <li class="active"><a href="privacypolicy.html">Privacy Policy</a></li>
